--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "recharts": "^2.12.7",
     "router": "^1.3.8",
     "web-vitals": "^2.1.4",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "xlsx-js-style": "^1.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
