--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "chart.js": "^4.4.3",
     "dom": "^0.0.3",
     "icons": "^1.0.0",
+    "laravel-echo": "^1.16.1",
+    "pusher-js": "^8.4.0-rc2",
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
     "react-bootstrap": "^2.10.2",
@@ -25,6 +27,7 @@
     "react-scripts": "5.0.1",
     "recharts": "^2.12.7",
     "router": "^1.3.8",
+    "socket.io-client": "^4.7.5",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5",
     "xlsx-js-style": "^1.2.0"
