--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 REACT_APP_API_URL=https://shreekrishnaastrology.com/api
 REACT_APP_IMAGE_URL=https://shreekrishnaastrology.com/public
+REACT_APP_SOCKET_URL= http://127.0.0.1:8000/api
