--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
     "apexcharts": "^3.49.1",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
+    "bwip-js": "^4.5.1",
     "chart.js": "^4.4.3",
     "dom": "^0.0.3",
+    "html2canvas": "^1.4.1",
     "icons": "^1.0.0",
+    "jspdf": "^2.5.1",
     "laravel-echo": "^1.16.1",
     "pusher-js": "^8.4.0-rc2",
+    "qrcode.react": "^4.0.1",
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
     "react-bootstrap": "^2.10.2",
