--- a/.env
+++ b/.env
@@ -1,3 +1,8 @@
 REACT_APP_API_URL=https://shreekrishnaastrology.com/api
 REACT_APP_IMAGE_URL=https://shreekrishnaastrology.com/public
 REACT_APP_SOCKET_URL= http://127.0.0.1:8000/api
+
+REACT_APP_PUSHER_APP_ID=1857690
+REACT_APP_PUSHER_KEY=7ae046560a0ed83ad8c7
+REACT_APP_PUSHER_SECRET=5dbd05cdfee574fb5ee9
+REACT_APP_PUSHER_CLUSTER=mt1
